# nflreadrust

./: CLAUDE.md  Cargo.toml  README.md
src/: cache.rs  config.rs  downloader.rs  error.rs  lib.rs  main.rs  utils_date.rs
src/loaders/: load_combine.rs  load_contracts.rs  load_depth_charts.rs  load_draft_picks.rs  load_ffverse.rs  load_ftn_charting.rs  load_injuries.rs  load_nextgen_stats.rs  load_officials.rs  load_participation.rs  load_pbp.rs  load_pfr_advstats.rs  load_player_stats.rs  load_players.rs  load_rosters.rs  load_rosters_weekly.rs  load_schedules.rs  load_snap_counts.rs  load_team_stats.rs  load_teams.rs  load_trades.rs  mod.rs  seasons.rs
tests/: unit_tests.rs  verify_data.rs
