[package]
name = "nflreadrust"
version = "0.1.0"
edition = "2024"
description = "A Rust port of nflreadpy - read NFL data from the nflverse project"
license = "MIT"

[lib]
name = "nflreadrust"
path = "src/lib.rs"

[[bin]]
name = "nflreadrust"
path = "src/main.rs"

[dependencies]
polars = { version = "0.46", features = ["parquet", "csv", "lazy", "dtype-date", "dtype-datetime", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16", "diagonal_concat", "is_in", "dtype-struct", "dtype-array", "dtype-categorical"] }
reqwest = { version = "0.12", features = ["blocking", "stream"] }
chrono = "0.4"
md5 = "0.7"
thiserror = "2"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
